# slurp

./: .gitignore  CMakeLists.txt  README.md  slurp.sln
Samples/Calculator/: Calculator.csproj  Program.cs  Tests.cs
Slurp/: CLRParserGenerator.cs  Class1.cs  Grammar.cs  Item.cs  LALRParserGenerator.cs  LR0ParserGenerator.cs  LRParser.cs  ProductionRule.cs  SLRParserGenerator.cs  Slurp.csproj  State.cs  Symbol.cs  Terminal.cs  Tokenizer.cs
Slurp-cpp/: CMakeLists.txt  Node.h  Rules.hpp  RulesTests.cpp  Slurp-cpp.cpp  Slurp-cpp.h  Stack.cpp  Stack.hpp  closure.hpp  first.hpp  follows.hpp  is_empty.hpp  parse_result.cpp  parse_result.hpp  parser_construction.hpp  prettyprint.hpp  recursive_descent.hpp  slurp.hpp  tokenizer.hpp  type_set.h  typeset.h  typeset_tests.cpp
Tests/: ParserTests.cs  Tests.csproj
