# CMakeList.txt : CMake project for Slurp-cpp, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Slurp-cpp "Slurp-cpp.cpp" "Slurp-cpp.h" "type_set.h" "Node.h" "Stack.hpp" "Stack.cpp")

# TODO: Add tests and install targets if needed.
